--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.55.0",
-    "@types/node": "^24.3.0"
+    "@types/node": "^24.3.0",
+    "dotenv": "^17.2.1"
   },
   "dependencies": {
     "csv-parse": "^6.1.0"
